corrected hover states/text overflow

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -10,11 +10,11 @@
   justify-content: center;
   grid-template-columns: repeat(auto-fit, 413px);
   gap: 40px 20px;
+  border-bottom: 1px solid rgba(33, 33, 33, 0.4);
 
 }
 
 @media screen and (max-width: 627px) {
   .cards__list { grid-template-columns: repeat(auto-fit, 288px);
   }
-
 }
