--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -32,7 +32,7 @@
 .profile__description {
   margin: 12px 0 0;
   opacity: 70%;
-  line-height: 1;
+  line-height: 16px;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
@@ -53,6 +53,7 @@
   font-weight: 500;
   line-height: 1;
   opacity: 70%;
+  transition: opacity 0.3s ease;
 }
 .profile__edit-btn:hover {
   opacity: 100%;
@@ -64,17 +65,18 @@
   background-color: #212121;
   min-width: 149px;
   min-height: 52px;
-  color: #fff;
+  color: #fcf5e5;
   border-radius: 10px;
   margin-top: auto;
   display: flex;
   gap: 8px;
   align-items: center;
-  padding: 0;
+  justify-content: center;
+  transition: background-color 0.3s ease;
 }
 
 .profile__add-btn:hover {
-  opacity: 80%;
+  background-color: rgb(33 33 33 / 80%);
   cursor: pointer;
 }
 
